@@ -23,7 +23,6 @@
 
 package com.microsoft.identity.common.internal.broker;
 
-import android.annotation.SuppressLint;
 import android.content.Context;
 import android.content.pm.ApplicationInfo;
 import android.content.pm.PackageInfo;
@@ -71,15 +70,31 @@ public class PackageHelper {
     }
 
     /**
-     * Reads first signature in the list for given package name.
+     * Reads first signature in the list for given package name and hashes with SHA-1.
      *
      * @param packageName name of the package for which signature should be returned
-     * @return signature for package
+     * @return SHA-1 signature hash for package
      */
-    public String getCurrentSignatureForPackage(final String packageName) {
-        final String methodTag = TAG + ":getCurrentSignatureForPackage";
+    public String getSha1SignatureForPackage(final String packageName) {
+        final String methodTag = TAG + ":getSha1SignatureForPackage";
         try {
-            return getCurrentSignatureForPackage(getPackageInfo(mPackageManager, packageName));
+            return getCurrentSignatureForPackage(getPackageInfo(mPackageManager, packageName), false);
+        } catch (NameNotFoundException e) {
+            Logger.error(methodTag, "Calling App's package does not exist in PackageManager. ", "", e);
+        }
+        return null;
+    }
+
+    /**
+     * Reads first signature in the list for given package name and hashes with SHA-512.
+     *
+     * @param packageName name of the package for which signature should be returned
+     * @return SHA-512 signature hash for package
+     */
+    public String getSha512SignatureForPackage(final String packageName) {
+        final String methodTag = TAG + ":getSha512SignatureForPackage";
+        try {
+            return getCurrentSignatureForPackage(getPackageInfo(mPackageManager, packageName), true);
         } catch (NameNotFoundException e) {
             Logger.error(methodTag, "Calling App's package does not exist in PackageManager. ", "", e);
         }
@@ -90,15 +105,17 @@ public class PackageHelper {
      * Reads first signature in the list for given package name.
      *
      * @param packageInfo package for which signature should be returned
+     * @param useSha512 if true, uses SHA-512 to generate signature hash (should be used for verification purposes); if false, uses default SHA (redirect URI purposes)
      * @return signature for package
      */
-    public static String getCurrentSignatureForPackage(final PackageInfo packageInfo) {
+    private static String getCurrentSignatureForPackage(final PackageInfo packageInfo,
+                                                       final boolean useSha512) {
         final String methodTag = TAG + ":getCurrentSignatureForPackage";
         try {
             final Signature[] signatures = getSignatures(packageInfo);
             if (signatures != null && signatures.length > 0) {
                 final Signature signature = signatures[0];
-                MessageDigest md = MessageDigest.getInstance("SHA");
+                MessageDigest md = MessageDigest.getInstance(useSha512 ? "SHA-512" : "SHA");
                 md.update(signature.toByteArray());
                 return Base64.encodeToString(md.digest(), Base64.NO_WRAP);
             }
